err/easy-test.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/easy_test-0.0.1.egg-info'...
Listing './lib/python3.5/site-packages/easy_test_selenium'...
Compiling './lib/python3.5/site-packages/easy_test_selenium/cmdline.py'...
***   File "./lib/python3.5/site-packages/easy_test_selenium/cmdline.py", line 21
    print 'running command ...'
                              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/easy_test_selenium/commands'...
Compiling './lib/python3.5/site-packages/easy_test_selenium/commands/_pathconf.py'...
***   File "./lib/python3.5/site-packages/easy_test_selenium/commands/_pathconf.py", line 4
    print ':D'
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/easy_test_selenium/commands/newtest.py'...
***   File "./lib/python3.5/site-packages/easy_test_selenium/commands/newtest.py", line 27
    print 'Test Case created successfully'
                                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/easy_test_selenium/commands/startproject.py'...
***   File "./lib/python3.5/site-packages/easy_test_selenium/commands/startproject.py", line 34
    print 'Project created successfully'
                                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/easy_test_selenium/commands/test.py'...
***   File "./lib/python3.5/site-packages/easy_test_selenium/commands/test.py", line 16
    print 'Test Finished'
                        ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/easy_test_selenium/templates'...
Listing './lib/python3.5/site-packages/easy_test_selenium/templates/project'...
Listing './lib/python3.5/site-packages/easy_test_selenium/templates/project/principal'...
Listing './lib/python3.5/site-packages/easy_test_selenium/templates/test_name'...
Compiling './lib/python3.5/site-packages/easy_test_selenium/templates/test_name/test_case.py'...
***   File "./lib/python3.5/site-packages/easy_test_selenium/templates/test_name/test_case.py", line 7
    print 'Test Demo'
                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/easy_test_selenium/test_case_principal.py'...
***   File "./lib/python3.5/site-packages/easy_test_selenium/test_case_principal.py", line 16
    print 'ejecuto el set up'
                            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/selenium'...
Listing './lib/python3.5/site-packages/selenium/common'...
Listing './lib/python3.5/site-packages/selenium/webdriver'...
Listing './lib/python3.5/site-packages/selenium/webdriver/android'...
Listing './lib/python3.5/site-packages/selenium/webdriver/blackberry'...
Listing './lib/python3.5/site-packages/selenium/webdriver/chrome'...
Listing './lib/python3.5/site-packages/selenium/webdriver/common'...
Listing './lib/python3.5/site-packages/selenium/webdriver/common/actions'...
Listing './lib/python3.5/site-packages/selenium/webdriver/common/html5'...
Listing './lib/python3.5/site-packages/selenium/webdriver/edge'...
Listing './lib/python3.5/site-packages/selenium/webdriver/firefox'...
Listing './lib/python3.5/site-packages/selenium/webdriver/firefox/amd64'...
Listing './lib/python3.5/site-packages/selenium/webdriver/firefox/x86'...
Listing './lib/python3.5/site-packages/selenium/webdriver/ie'...
Listing './lib/python3.5/site-packages/selenium/webdriver/opera'...
Listing './lib/python3.5/site-packages/selenium/webdriver/phantomjs'...
Listing './lib/python3.5/site-packages/selenium/webdriver/remote'...
Listing './lib/python3.5/site-packages/selenium/webdriver/safari'...
Listing './lib/python3.5/site-packages/selenium/webdriver/support'...
Listing './lib/python3.5/site-packages/selenium/webdriver/webkitgtk'...
Listing './lib/python3.5/site-packages/selenium-3.8.1.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './selenium'...
Listing './selenium/webdriver'...
Listing './selenium/webdriver/firefox'...
Listing './selenium/webdriver/firefox/amd64'...
Listing './selenium/webdriver/firefox/x86'...
Listing './selenium/webdriver/remote'...
Listing './share'...
Listing './share/python-wheels'...
